@@ -6,35 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>197</width>
-    <height>135</height>
+    <width>326</width>
+    <height>191</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QFormLayout" name="layout">
+   <property name="fieldGrowthPolicy">
+    <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+   </property>
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Status icons size:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QComboBox" name="sizesBox"/>
-   </item>
-   <item row="3" column="0" colspan="2">
-    <widget class="QCheckBox" name="extendedInfoBox">
-     <property name="text">
-      <string>Show extended icons</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" colspan="2">
-    <widget class="QCheckBox" name="statusBox">
-     <property name="text">
-      <string>Show status text</string>
      </property>
     </widget>
    </item>
@@ -45,12 +31,36 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0" colspan="2">
+   <item row="2" column="0" colspan="2">
+    <widget class="QCheckBox" name="statusBox">
+     <property name="text">
+      <string>Show status text</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="2">
+    <widget class="QCheckBox" name="extendedInfoBox">
+     <property name="text">
+      <string>Show extended icons</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
     <widget class="QCheckBox" name="liteBox">
      <property name="text">
       <string>Lite group headers</string>
      </property>
     </widget>
+   </item>
+   <item row="5" column="0" colspan="2">
+    <widget class="QCheckBox" name="onstartupBox">
+     <property name="text">
+      <string>Show contact list on startup</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QComboBox" name="sizesBox"/>
    </item>
   </layout>
  </widget>
